[tool.poetry]
name = "bot_vs_audio"
version = "0.1.0"
description = ""
authors = ["profitrolinka <glebbond02@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
pendulum = "^2.1.2"
pyTelegramBotAPI = "^4.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
